--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch test/**.js",
+    "grade": "mocha --reporter spec --timeout 300 test/*.js",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,22 @@
   "bugs": {
     "url": "https://github.com/duncan-G/Wikisack/issues"
   },
-  "homepage": "https://github.com/duncan-G/Wikisack#readme"
+  "homepage": "https://github.com/duncan-G/Wikisack#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "html-template-tag": "^2.0.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.6",
+    "pg": "^7.6.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.41.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.2.0",
+    "mocha-as-promised": "^2.0.0",
+    "supertest": "^3.3.0",
+    "supertest-as-promised": "^4.0.2"
+  }
 }
