--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^1.18.6",
     "pg": "^7.6.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.1"
+    "sequelize": "^4.41.1",
+    "slug": "^0.9.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
