--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --watch test/**.js",
-    "grade": "mocha --reporter spec --timeout 300 test/*.js",
     "start": "nodemon app.js"
   },
   "repository": {
@@ -22,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "html-template-tag": "^2.0.0",
+    "marked": "^0.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "pg": "^7.6.1",
