--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/duncan-G/Wikisack#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "html-template-tag": "^2.0.0",
     "marked": "^0.5.1",
     "morgan": "^1.9.1",
